Fix alignment issues (#150)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,3 +133,8 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0 !important;
     display: inline;
 }
+
+.col-lg-10{
+    padding-left: 10px;
+    padding-right: 10px;
+}
